Introduced Drupal\purge_queuer_url\TrafficRegistry and made the data-collection work, not happy about the database scheme yet though.

--- a/purge_queuer_url.services.yml
+++ b/purge_queuer_url.services.yml
@@ -5,3 +5,7 @@ services:
       - { name: cache_tags_invalidator }
     calls:
       - [setContainer, ['@service_container']]
+  purge_queuer_url.registry:
+    class: Drupal\purge_queuer_url\TrafficRegistry
+    public: true
+    arguments: ['@database']
