Woosh - \Drupal\purge_queuer_url\Plugin\Purge\Queuer\UrlAndPathQueuer exists and now queues URLs, we're getting closer!

--- a/purge_queuer_url.services.yml
+++ b/purge_queuer_url.services.yml
@@ -1,6 +1,6 @@
 services:
   purge_queuer_url.queuer:
-    class: Drupal\purge_queuer_url\UrlQueuer
+    class: Drupal\purge_queuer_url\Plugin\Purge\Queuer\UrlAndPathQueuer
     tags:
       - { name: cache_tags_invalidator }
     calls:
