--- a/purge_queuer_url.info.yml
+++ b/purge_queuer_url.info.yml
@@ -1,10 +1,9 @@
 name: URL and path queuer
 type: module
-description: 'Queues URLs or paths to your Purge queue after building a URL database.'
+description: 'Queues URLs or paths to your Purge queue utilizing a traffic database.'
 package: "Purge - queuers"
 version: VERSION
 core: 8.x
 dependencies:
   - purge
   - page_cache
-
