ConfigurationForm starting to work and allows clearing registry + moved PageCacheUrlRegistrationWrapper under StackMiddleware

--- a/purge_queuer_url.services.yml
+++ b/purge_queuer_url.services.yml
@@ -6,6 +6,6 @@ services:
     calls:
       - [setContainer, ['@service_container']]
   purge_queuer_url.registry:
-    class: Drupal\purge_queuer_url\TrafficRegistry
+    class: Drupal\purge_queuer_url\StackMiddleware\TrafficRegistry
     public: true
     arguments: ['@database']
