Issue #2701577 by davidwbarratt, nielsvm, Fidelix: reimplement as StackMiddleware and drop dependency on page_cache.

--- a/purge_queuer_url.services.yml
+++ b/purge_queuer_url.services.yml
@@ -6,6 +6,11 @@ services:
     calls:
       - [setContainer, ['@service_container']]
   purge_queuer_url.registry:
-    class: Drupal\purge_queuer_url\StackMiddleware\TrafficRegistry
+    class: Drupal\purge_queuer_url\TrafficRegistry
     public: true
     arguments: ['@database']
+  http_middleware.purge_queuer_url_registrar:
+    class: Drupal\purge_queuer_url\StackMiddleware\UrlRegistrar
+    arguments: ['@purge_queuer_url.registry', '@config.factory']
+    tags:
+      - { name: http_middleware, priority: 250 }
