Z331956: Added blacklisting feature to help fight queue overload by blocking randomly generated strings.

--- a/config/install/purge_queuer_url.settings.yml
+++ b/config/install/purge_queuer_url.settings.yml
@@ -3,3 +3,11 @@ host_override: false
 host: ''
 scheme_override: false
 scheme: 'http'
+blacklist:
+  - 'txn='
+  - 'gclid='
+  - 'dclid='
+  - 'utm_source='
+  - 'utm_campaign='
+  - 'utm_content='
+  - 'utm_medium='
