More default blacklist values

--- a/config/install/purge_queuer_url.settings.yml
+++ b/config/install/purge_queuer_url.settings.yml
@@ -11,3 +11,9 @@ blacklist:
   - 'utm_campaign='
   - 'utm_content='
   - 'utm_medium='
+  - '/user/login?destination='
+  - '/user/register?destination='
+  - '/edit'
+  - '/delete'
+  - 'entity-browser'
+  - 'translations'
