More and better blacklist defaults.

--- a/config/install/purge_queuer_url.settings.yml
+++ b/config/install/purge_queuer_url.settings.yml
@@ -4,6 +4,10 @@ host: ''
 scheme_override: false
 scheme: 'http'
 blacklist:
+  - '/admin/'
+  - '/user/login?destination='
+  - '/user/register?destination='
+  - '/entity-browser'
   - 'txn='
   - 'gclid='
   - 'dclid='
@@ -11,9 +15,6 @@ blacklist:
   - 'utm_campaign='
   - 'utm_content='
   - 'utm_medium='
-  - '/user/login?destination='
-  - '/user/register?destination='
   - '/edit'
   - '/delete'
-  - 'entity-browser'
   - 'translations'
