--- a/purge_queuer_url.info.yml
+++ b/purge_queuer_url.info.yml
@@ -1,7 +1,8 @@
-name: URLs queuer
+core_version_requirement: '^8 || ^9'
+core: 8.x
+name: 'URLs queuer'
 type: module
 description: 'Queues URLs or paths to your Purge queue utilizing a traffic database.'
 package: "Purge - queuers"
-core: 8.x
 dependencies:
   - purge
