--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=7.2",
-        "drupal/core": "^8.7.7 || ^9",
-        "drupal/purge": "^3.0.0-beta9"
+        "drupal/core": "^8.8.6 || ^9",
+        "drupal/purge": "^3.0.0"
     },
     "extra": {
         "branch-alias": {
